--- a/bookclubproj.client/src/app/app.component.html
+++ b/bookclubproj.client/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class="app-container">
-  <h1>{{ title }}</h1>
-  <app-header></app-header>
-  <userbooklist></userbooklist>
-  <router-outlet></router-outlet>
+  <router-outlet>
+  </router-outlet>
 </div>
